# crawler_tester

./: .gitignore  Dockerfile  README.md  pyproject.toml
crawler_tester/: __init__.py  delay.py  http_codes.py  redirect.py  redirect_chain.py  status.py
crawler_tester/templates/: delay-contents.html  delay-page.html  delayed-onload.html  location-assign.html  location-href.html  location-replace.html  meta-refresh.html  obfuscated-location-assign.html
tests/: conftest.py  test_delay.py  test_redirect.py  test_redirect_chain.py  test_status.py
